-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.0
I don't know why this was not already done, but the QML Audio element has "roles" and Android's AudioManager has streams, and they match very nicely:
AudioManager : QML Audio Role STREAM_ACCESSIBILITY : AccessibilityRole STREAM_ALARM : AlarmRole STREAM_DTMF : **no match** STREAM_MUSIC : [MusicRole, VideoRole, GameRole] STREAM_NOTIFICATION : NotificationRole STREAM_RING : RingtoneRole STREAM_SYSTEM : SonificationRole STREAM_VOICE_CALL : VoiceCommunicationRole
I looked at the Qt source on gitlab and the https://github.com/qt/qtmultimedia/blob/5.12/src/plugins/android/jar/src/org/qtproject/qt5/android/multimedia/QtAndroidMediaPlayer.java
Makes no mention of streams or roles, and neither does its JNI interface.
The QML Audio docs say: "The audio role must be set before setting the source property." which is annoying but I can deal with it. But on android this doesn't even work.