Android: Implement audio roles

Introduced custom and standard audio role controls using MediaPlayer.setAudioAttributes(AudioAttributes)
which added in API level 21.

Custom audio roles might contain a list of roles separated by comma.
E.g "CONTENT_TYPE_MOVIE,USAGE_ALARM", which means content type is movie
and usage is alarm.

[ChangeLog][Platform Specific Changes][Android] Implemented audio roles.

Task-number: QTBUG-73119
Change-Id: I281d1ce899d29f54d271516a1fca5f11c897fc90
Reviewed-by: Christian Strømme <christian.stromme@qt.io>